# planner

./: .builderrules  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT_CORE.md  AUDIT_FINDINGS.md  AUDIT_FRONTEND.md  AUDIT_SERVER_TUI_SCHEMAS.md  AUTH0_SETUP.md  CHANGES_BACKEND_SPRINT5.md  CHANGES_FRONTEND.md  CHANGES_FRONTEND_TESTS.md  CHANGES_REAL_TESTS.md  CHANGES_SERVER_PIPELINE.md  CHANGES_TUI_SCHEMAS_TESTS.md  CLAUDE.md  CLEANUP_PLAN.md  COMPREHENSIVE_AUDIT.md  COMPREHENSIVE_AUDIT_v2.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  INTEGRITY_SWEEP.md  Makefile  README.md  api-contract.yaml  builder.config.json  builder.server.config.json  living_system_blueprint_spec.md  models.md  package.json  verify-sandbox.sh
.codex/: project-skill-config.md
deploy/: install.sh  planner.env  planner.service
docs/: PROJECT_REVIEW_AND_BRAINSTORM.md  admin-observability-plan.md  blueprint-project-root-codegraph-integration.md  builder-developer-docs-phase-a-exhaustive-analysis.md  builder-fusion-phase-01-api-grounded-skill-and-existing-project-contract-spec.md  builder-fusion-phase-02-existing-project-helper-contract-spec.md  builder-fusion-phase-03-sync-verification-workflow-spec.md  builder-fusion-phase-04-project-visibility-diagnosis-and-remediation-spec.md  builder-fusion-phase-05-branch-surface-visibility-reconciliation-spec.md  builder-fusion-project-management-and-runtime-sync-spec.md  builder-local-workflow.md  builder-phase-b-documented-config-and-instruction-alignment-spec.md  builder-phase-c-documented-config-workflow-tightening-spec.md  builder-phase-d-repo-local-dsi-mcp-setup-spec.md  graphify-omx-handoff.md  import-existing-project-phase-1-domain-skeleton-spec.md  import-existing-project-phase-10-historical-review-draft-restore-spec.md  import-existing-project-phase-11-selective-apply-merge-controls-spec.md  import-existing-project-phase-12-historical-applied-restore-for-review-spec.md  import-existing-project-phase-13-historical-entry-comparison-spec.md  import-existing-project-phase-14-arbitrary-history-comparison-spec.md  import-existing-project-plan.md  (+156 more)
planner-core/: Cargo.toml
planner-core/src/: blueprint.rs  component_naming.rs  discovery.rs  knowledge_naming.rs  lib.rs  main.rs  observability.rs
planner-core/src/cxdb/: durable.rs  mod.rs  protocol.rs  query.rs
planner-core/src/dtu/: auth0.rs  mod.rs  sendgrid.rs  stripe.rs  supabase.rs  twilio.rs
planner-core/src/llm/: json_repair.rs  mod.rs  providers.rs
planner-core/src/pipeline/: audit.rs  blueprint_emitter.rs  mod.rs  project.rs  pyramid.rs  verification.rs
planner-core/src/pipeline/steps/: ar.rs  ar_refinement.rs  chunk_planner.rs  compile.rs  context_pack.rs  factory.rs  factory_worker.rs  git.rs  intake.rs  linter.rs  mod.rs  ralph.rs  telemetry.rs  validate.rs
planner-core/src/pipeline/steps/socratic/: belief_state.rs  category_planner.rs  constitution.rs  convergence.rs  domain_classifier.rs  mod.rs  prompt_batch_planner.rs  prompt_protocol.rs  prompt_response_adjudicator.rs  question_planner.rs  socratic_engine.rs  speculative_draft.rs
planner-core/src/storage/: mod.rs
planner-core/tests/: integration_e2e.rs  pipeline_integration.rs  prompt_batch_benchmark.rs
planner-schemas/: Cargo.toml
planner-schemas/src/: lib.rs  turn.rs
planner-schemas/src/artifacts/: agents_manifest.rs  ar_report.rs  blueprint.rs  consequence_card.rs  dtu.rs  factory_output.rs  git_commit.rs  graph_dot.rs  intake.rs  mod.rs  nlspec.rs  preview_snapshot.rs  pyramid_summary.rs  ralph_finding.rs  run_budget.rs  runtime.rs  satisfaction_result.rs  scenario_set.rs  socratic.rs
planner-server/: Cargo.toml
planner-server/src/: api.rs  auth.rs  e2e_mock_llm.rs  import.rs  lib.rs  main.rs  project.rs  rate_limit.rs  rbac.rs  runtime.rs  session.rs  ws.rs  ws_socratic.rs
planner-server/tests/: server_integration.rs
planner-tui/: Cargo.toml
planner-tui/src/: app.rs  blueprint_table.rs  events.rs  main.rs  pipeline.rs  ui.rs
(+318 files in other folders)
