[package]
name = "planner-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
planner-schemas = { path = "../planner-schemas" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
rmp-serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
