[package]
name = "planner-schemas"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
