[package]
name = "planner-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "planner_server"
path = "src/lib.rs"

[[bin]]
name = "planner-server"
path = "src/main.rs"

[dependencies]
planner-core = { path = "../planner-core" }
planner-schemas = { path = "../planner-schemas" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
rmp-serde = { workspace = true }
parking_lot = "0.12"
async-trait = { workspace = true }
